--- a/GPMobilePad/GPMobilePad.csproj
+++ b/GPMobilePad/GPMobilePad.csproj
@@ -58,6 +58,8 @@
     <MtouchExtraArgs>-compiler:clang</MtouchExtraArgs>
     <MtouchLink>None</MtouchLink>
     <MtouchUseLlvm>true</MtouchUseLlvm>
+    <MtouchDebug>true</MtouchDebug>
+    <MtouchFastDev>true</MtouchFastDev>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
@@ -138,8 +140,6 @@
     <Compile Include="AppDelegate.cs" />
     <Compile Include="Screens\ProvisionDialog.cs" />
     <Compile Include="Screens\MatterDetail.cs" />
-    <Compile Include="Util\ImageResizer.cs" />
-    <Compile Include="Util\ColorHelper.cs" />
     <Compile Include="Screens\PostFee.cs" />
     <Compile Include="Screens\PostNote.cs" />
     <Compile Include="ReportControllers\FeeTargetProgressController.cs" />
@@ -148,41 +148,22 @@
     <Compile Include="ReportControllers\MatterAnalysisBranchController.cs" />
     <Compile Include="ReportControllers\MatterAnalysisBranchOwnerController.cs" />
     <Compile Include="ReportControllers\FinancialStatusByBranchController.cs" />
-    <Compile Include="Util\FinanceElement.cs" />
-    <Compile Include="Util\NumberElement.cs" />
-    <Compile Include="Util\TitleElement.cs" />
-    <Compile Include="Util\StringsElement.cs" />
-    <Compile Include="Util\Tools.cs" />
-    <Compile Include="Util\DataUtil.cs" />
-    <Compile Include="Util\UIViewBordered.cs" />
-    <Compile Include="Util\PickerDataModel.cs" />
-    <Compile Include="Util\BigFinanceElement.cs" />
     <Compile Include="ReportControllers\FeeTargetProgressBranchController.cs" />
-    <Compile Include="Util\ReportsDataSource.cs" />
     <Compile Include="ReportControllers\ReportSelectorController.cs" />
-    <Compile Include="Util\UIDecimalField.cs" />
-    <Compile Include="Util\LoadingView.cs" />
-    <Compile Include="Util\CalendarMonthView.cs" />
-    <Compile Include="Util\IPagedViewDataSource.cs" />
     <Compile Include="Screens\PagedViewController.cs" />
     <Compile Include="Screens\DummyDialog.cs" />
-    <Compile Include="Util\GPDatePicker.cs" />
-    <Compile Include="Util\IDateInterface.cs" />
-    <Compile Include="Util\IPostingComplete.cs" />
     <Compile Include="Screens\SplitController.cs" />
-    <Compile Include="Util\LoadingOverlay.cs" />
-    <Compile Include="Util\NoOverlapTableViewCell.cs" />
     <Compile Include="Screens\Finder.cs" />
-    <Compile Include="Util\DeviceTypeUtil.cs" />
     <Compile Include="Screens\LaunchSplash.cs" />
-    <Compile Include="Util\Stripper.cs" />
-    <Compile Include="Util\CustomImageStringElement.cs" />
     <Compile Include="ReportControllers\BohaPageViewController.cs" />
+    <Compile Include="PadUtil\FinanceElement.cs" />
+    <Compile Include="PadUtil\DeviceTypeUtil.cs" />
   </ItemGroup>
   <Import Project="..\GhostPracticeLibrary\GhostPracticeLibrary.projitems" Label="Shared" Condition="Exists('..\GhostPracticeLibrary\GhostPracticeLibrary.projitems')" />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Folder Include="Screens\" />
+    <Folder Include="PadUtil\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Images\179-notepad.png" />
